pip install django-sslserver
$pip install django-sslserver

--- a/full_stack/home/static/css/main.css
+++ b/full_stack/home/static/css/main.css
@@ -226,7 +226,7 @@ div > img {
 
 .card-group img {
   border-radius: .5rem;
-  max-width: 85%;
+  max-width: 70%;
 }
 
 .card-group .card-body .card-title {
@@ -309,7 +309,7 @@ div > img {
 
 
 /*! log - in */
-@import url('https://fonts.googleapis.com/css?family=Montserrat:400,800');
+/* @import url('https://fonts.googleapis.com/css?family=Montserrat:400,800'); */
 
 #containerlog > h1 {
 	font-weight: bold;
@@ -387,8 +387,8 @@ div > img {
 .containerlog {
 	background-color: #fff;
 	border-radius: 10px;
-  	box-shadow: 0 14px 28px rgba(0,0,0,0.25), 
-			0 10px 10px rgba(0,0,0,0.22);
+  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 
+    0 10px 10px rgba(0,0,0,0.22);
 	/* position: fixed; */
   top: 15%;
   left: 25%;
@@ -396,6 +396,24 @@ div > img {
 	width: 768px;
 	max-width: 100%;
 	/* max-height: 520px; */
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.container_detail {
+  background-color: #fff;
+	border-radius: 10px;
+  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 
+    0 10px 10px rgba(0,0,0,0.22);
+	/* position: fixed; */
+  top: 15%;
+  left: 25%;
+	overflow: hidden;
+	width: 768px;
+	max-width: 100%;
 }
 
 .form-containerlog {
@@ -524,6 +542,13 @@ div > img {
 	width: 40px;
 }
 
+/* footer */
+#footer {
+  background: rgb(106, 17, 203);
+  background: -webkit-linear-gradient(to right, rgba(106, 17, 203, 0.9), rgba(199, 147, 255, 0.9));;
+  background: linear-gradient(to right, rgba(106, 17, 203, 0.9), rgba(199, 147, 255, 0.9));;
+}
+
 
 /*! Responsive */
 @media (max-width: 992px) {
@@ -565,6 +590,18 @@ div > img {
   }
 }
 
+@media (max-width: 800px) {
+  #user_profile .user_profile_responsive {
+    display: none;
+  }
+}
+
+@media (max-width: 600px) {
+  #user_profile .user_profile_responsive_600 {
+    display: none;
+  }
+}
+
 @media (max-width: 768px) {
   .header {
     display: flex;
@@ -583,6 +620,22 @@ div > img {
   .card-group{
     display: grid;
     grid-template-columns: repeat(2,1fr);
+  }
+}
+
+@media (max-width: 630px) {
+  .containerlog {
+    font-size: .6rem;
+  }
+  #containerlog form {
+    padding: 0 5px;
+    font-size: .5rem;
+  }
+  #containerlog form h1 {
+    font-size: 1rem;
+  }
+  #containerlog .overlay-panel h1{
+    font-size: 1rem;
   }
 }
 
@@ -606,5 +659,21 @@ div > img {
   .card-group{
     display: grid;
     grid-template-columns: repeat(1,1fr);
+  }
+  #full-stack {
+    display: flex;
+    flex-direction: column;
+  }
+  .search-box{
+    margin: .5rem 0 .5rem 0;
+  }
+  .container_detail {
+    font-size: small;
+  }
+  .container_detail .media-text > a,
+  .container_detail .form-group > input,
+  .container_detail .media-body > h4,
+  .container_detail .body-text > h4 {
+    font-size: .8rem;
   }
 }
