--- a/full_stack/user/templates/user_profile.html
+++ b/full_stack/user/templates/user_profile.html
@@ -13,16 +13,16 @@
 </header>
 <!-- Header -->
 
-<table class="table table-bordered text-center rounded shadow-lg mt-5 w-75" style="margin: auto;">
+<table class="table table-bordered text-center rounded shadow-lg mt-5 w-75" id="user_profile" style="margin: auto;">
     <thead class="bg-secondary text-dark">
         <tr>
-            <th>Profile Photo</th>
-            <th>Name</th>
-            <th>E Mail</th>
-            <th>Phone</th>
-            <th>Address</th>
-            <th>City</th>
-            <th>Process</th>
+            <th class="user_profile_responsive_600">Profile Photo</th>
+            <th class="user_profile_responsive_600">Name</th>
+            <th class="user_profile_responsive_600">E Mail</th>
+            <th class="user_profile_responsive">Phone</th>
+            <th class="user_profile_responsive">Address</th>
+            <th class="user_profile_responsive">City</th>
+            <th class="user_profile_responsive_600">Process</th>
         </tr>
     </thead>
     <tbody class="align-middle">
@@ -32,11 +32,11 @@
             {% else %}
             <td class="align-middle"><img src="" alt="NO PHOTO!" style="width: 100px;"></td>
             {% endif %}
-            <td class="align-middle">{{ profile.user.get_full_name }}</td>
-            <td class="align-middle">{{ profile.user.email }}</td>
-            <td class="align-middle">{{ profile.phone }}</td>
-            <td class="align-middle">{{ profile.address }}</td>
-            <td class="align-middle">{{ profile.city }}</td>
+            <td class="align-middle user_profile_responsive_600">{{ profile.user.get_full_name }}</td>
+            <td class="align-middle user_profile_responsive_600">{{ profile.user.email }}</td>
+            <td class="align-middle user_profile_responsive">{{ profile.phone }}</td>
+            <td class="align-middle user_profile_responsive">{{ profile.address }}</td>
+            <td class="align-middle user_profile_responsive">{{ profile.city }}</td>
             <td class="align-middle">
                 <a class="btn btn-primary rounded px-4 py-2 rounded text-light align-items-center hidden-arrow" id="navbarDropdownEditProfile" type="button" data-toggle="modal" data-target="#containereditprofile">Edit Profile</a>
                 <hr>
