it's over for now
it's over for now

--- a/full_stack/home/static/css/main.css
+++ b/full_stack/home/static/css/main.css
@@ -16,6 +16,7 @@
   background: -webkit-linear-gradient(to right, rgba(106, 17, 203, 0.9), rgba(199, 147, 255, 0.9));;
   background: linear-gradient(to right, rgba(106, 17, 203, 0.9), rgba(199, 147, 255, 0.9));;
   height: 40vh;
+  border-radius: 0 0 15px 15px;
 }
 
 /* ! NAVBAR RIGHT  */
@@ -542,11 +543,24 @@ div > img {
 	width: 40px;
 }
 
-/* footer */
+/*! footer */
 #footer {
   background: rgb(106, 17, 203);
   background: -webkit-linear-gradient(to right, rgba(106, 17, 203, 0.9), rgba(199, 147, 255, 0.9));;
   background: linear-gradient(to right, rgba(106, 17, 203, 0.9), rgba(199, 147, 255, 0.9));;
+  padding: 20px;
+  background-color: #0099ff;
+  color: #fff;
+  border-radius: 15px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+}
+
+#footer-icons {
+  margin: 0;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 
