--- a/full_stack/home/static/css/main.css
+++ b/full_stack/home/static/css/main.css
@@ -398,7 +398,7 @@ div > img {
 	max-width: 100%;
 	/* max-height: 520px; */
   margin: 0;
-  position: absolute;
+  /* position: absolute; */
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
