--- a/full_stack/home/templates/post_detail.html
+++ b/full_stack/home/templates/post_detail.html
@@ -78,19 +78,13 @@
             <label for="message">Your Message*</label>
             <textarea id="message" cols="30" rows="5" name="comment" class="form-control"></textarea>
         </div>
-        {% comment %} <div class="form-group">
-            <label for="subject">Subject*</label>
-            <input type="text" class="form-control" id="message" name="subject">
-        </div>
-        <div class="form-group">
-            <label for="name">Your Name*</label>
-            <input type="text" name="user" class="form-control" id="name">
-        </div> {% endcomment %}
         <div class="form-group mb-0">
         {% if user.id is not None %}
             <input type="submit" value="Leave Your Review" class="btn btn-outline-success px-3 mt-2 rounded shadow-sm float-right">
         {% else %}
-            <a href="#" type="button" data-toggle="modal" data-target="#containerlog"><i class="fa-regular fa-user text-dark px-2"></i>You must be logged in to post a review</a>
+            <a href="#" type="button" data-toggle="modal" data-target="#containerlog">
+                <i class="fa-regular fa-user text-dark px-2"></i>You must be logged in to post a review
+            </a>
         {% endif %} 
         </div>
     </form>
