footer.html back-to-top fixed
$('html, body').animate({scrollTop: 0}, 800, 'swing');

--- a/full_stack/home/templates/footer.html
+++ b/full_stack/home/templates/footer.html
@@ -30,7 +30,7 @@
                 </div>
             </div>
         </div>
-        <div class="row border-top mx-xl-5 py-4" style="border-color: rgba(256, 256, 256, .1) !important;">
+        <div class="row mx-xl-5 py-4">
             <div class="col-md-6 px-xl-0">
                 <p class="mb-md-0 text-center text-md-left text-secondary">
                     &copy; All Rights Reserved. Designed
@@ -45,13 +45,13 @@
 
 
 <!-- Back to Top -->
-<a href="#" class="btn btnnavbar btn-primary back-to-top "><i class="fa fa-angle-double-up"></i></a>
+<a href="#" type="button" class="btn btnnavbar btn-primary back-to-top"><i class="fa fa-angle-double-up"></i></a>
 
 <!-- DRIVER JS -->
 <script src="https://cdn.jsdelivr.net/npm/driver.js@1.0.1/dist/driver.js.iife.js"></script>
 
 <!-- JavaScript Libraries -->
-<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>
 
 <!-- Template Javascript -->
