--- a/full_stack/home/templates/header.html
+++ b/full_stack/home/templates/header.html
@@ -5,7 +5,7 @@
     <div class="header">
         <div class="container" style="position: absolute;">
             <img src="{% static 'img/navbar.png' %}" alt=".." class="my-4 rounded-7">
-            <h2 class="text-light px-2 border-bottom" id="navbar-text-home">I Learning Python/Django - Fullstack</h2>
+            <h2 class="text-light px-2 border-bottom" id="navbar-text-home">I'm Learning Python/Django - Fullstack</h2>
         </div>
     </div>
 </header>
