--- a/full_stack/home/templates/navbar.html
+++ b/full_stack/home/templates/navbar.html
@@ -3,7 +3,7 @@
 
 {% block body %}
 <!-- Navbar -->
-<nav class="navbar navbar-expand bg-light gradient-custom px-5">
+<nav class="navbar navbar-expand gradient-custom px-5">
     <!-- Container wrapper -->
     <div class="container-fluid" id="full-stack">
         <!-- Toggle button -->
@@ -97,7 +97,6 @@
         </div>
         <!-- Right elements -->
     </div>
-
     <!-- Container wrapper -->
 </nav>
 <!-- Navbar -->
