--- a/full_stack/home/templates/content.html
+++ b/full_stack/home/templates/content.html
@@ -15,12 +15,9 @@
       <div class="card-body w-100">
         <h5 class="card-title" id="card-user">{{ post.user.get_full_name }}</h5>
         <p class="card-text" id="card-content">{{ post.content }}</p>
-        {% comment %} {{ post.title }} {% endcomment %}
         <p class="card-text" id="card-create"><small class="text-muted">{{ post.create_at }}</small></p>
       </div>
       <div class="text-right w-100 p-2">
-        {% comment %} <a class="btn btn-outline-warning rounded align-items-center hidden-arrow" href="/post_detail/{{post.id}}" value="{{post.id}}" id="navbarDropdownMenuAvatar" type="button" data-toggle="modal" data-target="#containerdetail">DETAIL</a> {% endcomment %}
-
         <a class="btn btn-outline-warning rounded align-items-center hidden-arrow" id="card-detail" href="/post_detail/{{post.id}}">DETAIL</a>
       </div>
     </div>
@@ -30,8 +27,6 @@
 <div class="pagination justify-content-center">
   <span class="step-links">
       {% if page_obj.has_previous %}
-          {% comment %} <a class="btn btnnavbar text-dark d-blo" style="display: inline-block;" href="?page={{ page_obj.previous_page_number }}">&laquo;</a> {% endcomment %}
-
           <a class="btn btnnavbar text-warning" style="display: inline-flex; width: 35px !important; height: 35px !important;" href="?page={{ page_obj.previous_page_number }}"><i class="fa fa-angle-double-left"></i>
           </a>
       {% endif %}
@@ -41,8 +36,6 @@
       </span>
 
       {% if page_obj.has_next %}
-          {% comment %} <a class="btn btnnavbar text-dark" style="display: inline-flex;" href="?page={{ page_obj.paginator.num_pages }}">&raquo;</a> {% endcomment %}
-
           <a class="btn btnnavbar text-warning" style="display: inline-flex; width: 35px !important; height: 35px !important;" href="?page={{ page_obj.paginator.num_pages }}"><i class="fa fa-angle-double-right"></i>
           </a>
       {% endif %}
@@ -50,6 +43,6 @@
 </div>
 
 
-{% include "post_detail_modal.html" %}
+{% comment %} {% include "post_detail_modal.html" %} {% endcomment %}
 
 {% endblock %}
